@@ -174,6 +174,7 @@ AC_CHECK_HEADERS([sys/sysctl.h], [], [],
 ]])
 
 dnl Check for particular preprocessor macros
+LCD_SA_RESTART
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
