@@ -11,6 +11,7 @@ v.0.5dev (ongoing development)
  * Make all drivers using parallel port fail if they cannot get IO permission
  * Include <errno.h> instead of <sys/errno.h> everywhere (found by S. Klauer)
  * configure: Fix de-selecting of drivers
+ * Build system: Add a check testing if SA_RESTART flag is available.
 
 v0.5.3
  + lcdexec: notification when called program finishes
